@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-07T00:28:42Z",
-  "count_outdated" : 699,
-  "uniques_outdated" : 153,
+  "timestamp" : "2022-12-07T16:06:35Z",
+  "count_outdated" : 700,
+  "uniques_outdated" : 154,
   "count" : 705,
   "uniques" : 158,
   "views" : [
-    {
-      "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 1,
