@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 5,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 1,
